Working on new Region system.

--- a/codesuite.conf
+++ b/codesuite.conf
@@ -1,11 +1,79 @@
-totem_add ACCOUNT 1 0x00000001
+dump_message
+postdump_message
+# Attributes
+attr_access ACCOUNT immortal pinvisible
+attr_access GAGGED immortal pinvisible
+attr_access CHANALIAS immortal pinvisible
+attr_access APPROVED immortal pinvisible
+atrperms INFO_:6:5 CHANNELS_:6:5 BBS_:6:5 GAME_:6:2
+# Functions
+function_access lattrp guildmaster
+# Connect
+connect_perm 106
+# Locks
+parentable_control_lock yes
+# Formatters
+format_contents 1
+format_exits 1
+format_name 1
+formats_are_local 1
+# Player Config
+player_name_spaces 1
+partial_conn 0
+partial_deconn 0
+match_own_commands 1
+player_match_own_commands 1
+# Misc
+enable_tstamps 1
+penn_switches 1
+float_switches 1
+# Totems
+totem_add ACCOUNT 8 1
 totem_letter ACCOUNT 0 A
-totem_access_set ACCOUNT w
-totem_access_unset ACCOUNT w
+totem_access_set ACCOUNT i
+totem_access_unset ACCOUNT i
 totem_access_type ACCOUNT P R E
-
-totem_add PROTOTYPE 1 0x00000002
+#
+totem_add PROTOTYPE 8 2
 totem_letter PROTOTYPE 0 P
-totem_access_set PROTOTYPE w
-totem_access_unset PROTOTYPE w
+totem_access_set PROTOTYPE g
+totem_access_unset PROTOTYPE g
 totem_access_type PROTOTYPE P R E
+#
+totem_add CHARACTER 8 4
+totem_letter CHARACTER 0 C
+totem_access_set CHARACTER i
+totem_access_unset CHARACTER i
+totem_access_type CHARACTER R E
+#
+totem_add NPC 8 8
+totem_letter NPC 0 N
+totem_access_set NPC g
+totem_access_unset NPC g
+totem_access_type NPC P R E
+#
+totem_add PC 8 16
+totem_letter PC 0 N
+totem_access_set PC i
+totem_access_unset PC i
+totem_access_type PC T R E
+#
+totem_add ITEM 8 32
+totem_letter ITEM 0 I
+totem_access_set ITEM g
+totem_access_unset ITEM g
+totem_access_type ITEM P R E
+#
+totem_add STRUCTURE 8 64
+totem_letter STRUCTURE 0 S
+totem_access_set STRUCTURE g
+totem_access_unset STRUCTURE g
+totem_access_type STRUCTURE P R E
+#
+totem_add REGION 8 128
+totem_letter REGION 0 R
+totem_access_set REGION g
+totem_access_unset REGION g
+totem_access_type REGION P R E
+# Final Load
+include custom.conf
