Power loss emergency commit.

--- a/codesuite.conf
+++ b/codesuite.conf
@@ -24,9 +24,20 @@ partial_deconn 0
 match_own_commands 1
 player_match_own_commands 1
 # Misc
+secure_jumpok 0
 enable_tstamps 1
 penn_switches 1
 float_switches 1
+alt_inventories 1
+includenest 30
+includecnt 10000
+room_aconnect 1
+room_adisconnect 1
+idle_timeout -1
+# inventory/equipment system
+alt_inventories 1
+altover_inv 1
+showother_altinv 1
 # Totems
 totem_add ACCOUNT 8 1
 totem_letter ACCOUNT 0 A
@@ -76,4 +87,4 @@ totem_access_set REGION g
 totem_access_unset REGION g
 totem_access_type REGION P R E
 # Final Load
-include custom.conf
+include objects.conf
