--- a/objects.conf
+++ b/objects.conf
@@ -1,6 +1,3 @@
-# game name - change this!
-mud_name RhostSuite
-
 # utility objects
 master_room -1
 file_object -1
@@ -12,3 +9,8 @@ global_parent_room -1
 global_parent_thing -1
 global_parent_exit -1
 global_parent_player -1
+
+# Start locations
+default_home 0
+player_starting_room 0
+player_starting_home 0
