--- a/codesuite.conf
+++ b/codesuite.conf
@@ -28,7 +28,6 @@ secure_jumpok 0
 enable_tstamps 1
 penn_switches 1
 float_switches 1
-alt_inventories 1
 includenest 30
 includecnt 10000
 room_aconnect 1
@@ -86,5 +85,11 @@ totem_letter REGION 0 R
 totem_access_set REGION g
 totem_access_unset REGION g
 totem_access_type REGION P R E
+#
+totem_add FACTION 7 1
+totem_letter FACTION 0 F
+totem_access_set FACTION I
+totem_access_unset FACTION I
+totem_access_type FACTION P R E
 # Final Load
 include objects.conf
