--- a/codesuite.conf
+++ b/codesuite.conf
@@ -5,7 +5,7 @@ attr_access ACCOUNT immortal pinvisible
 attr_access GAGGED immortal pinvisible
 attr_access CHANALIAS immortal pinvisible
 attr_access APPROVED immortal pinvisible
-atrperms INFO_:6:5 CHANNELS_:6:5 BBS_:6:5 GAME_:6:2
+atrperms INFO_:6:5 CHANNELS_:6:5 BBS_:6:5 GAME_:6:2 FAC_:6:2
 # Functions
 function_access lattrp guildmaster
 # Connect
