--- a/codesuite.conf
+++ b/codesuite.conf
@@ -9,7 +9,7 @@ atrperms INFO_:6:5 CHANNELS_:6:5 BBS_:6:5 GAME_:6:2 FAC_:6:2
 # Functions
 function_access lattrp guildmaster
 # Connect
-connect_perm 106
+connect_perm 102
 # Locks
 parentable_control_lock yes
 # Formatters
@@ -30,9 +30,11 @@ penn_switches 1
 float_switches 1
 includenest 30
 includecnt 10000
+global_aconnect 1
 room_aconnect 1
 room_adisconnect 1
 idle_timeout -1
+global_sideeffects 1
 # inventory/equipment system
 alt_inventories 1
 altover_inv 1
