--- a/codesuite.conf
+++ b/codesuite.conf
@@ -35,6 +35,7 @@ room_aconnect 1
 room_adisconnect 1
 idle_timeout -1
 global_sideeffects 1
+mux_lcon_compat 1
 # inventory/equipment system
 alt_inventories 1
 altover_inv 1
