Channels updated, Radio system completed, coding style standardized.

--- a/codesuite.conf
+++ b/codesuite.conf
@@ -1,11 +1,8 @@
+# Let's clear these annoying things.
 dump_message
 postdump_message
 # Attributes
-attr_access ACCOUNT immortal pinvisible
-attr_access GAGGED immortal pinvisible
-attr_access CHANALIAS immortal pinvisible
-attr_access APPROVED immortal pinvisible
-atrperms INFO_:6:5 CHANNELS_:6:5 BBS_:6:5 GAME_:6:2 FAC_:6:2
+atrperms INFO.:6:5 CHANINFO.:6:5 CHANNELS.:6:5 BBS.:6:5 GAME.:6:2 FAC.:6:2 ST.:6:2 STAT.:6:2 EQUIP.:6:2
 # Functions
 function_access lattrp guildmaster
 # Connect
@@ -23,7 +20,10 @@ partial_conn 0
 partial_deconn 0
 match_own_commands 1
 player_match_own_commands 1
+# Home must be restricted in favor of a softcoded 'recall' command.
+restrict_home 16384
 # Misc
+expand_goto 1
 secure_jumpok 0
 enable_tstamps 1
 penn_switches 1
@@ -36,63 +36,90 @@ room_adisconnect 1
 idle_timeout -1
 global_sideeffects 1
 mux_lcon_compat 1
+# Up the cache to handle larger games.
+cache_width 2048
+cache_depth 128
 # inventory/equipment system
 alt_inventories 1
 altover_inv 1
 showother_altinv 1
-# Totems
+# Totems: Account
 totem_add ACCOUNT 8 1
 totem_letter ACCOUNT 0 A
 totem_access_set ACCOUNT i
 totem_access_unset ACCOUNT i
 totem_access_type ACCOUNT P R E
-#
+# Totems: PROTOTYPE
 totem_add PROTOTYPE 8 2
 totem_letter PROTOTYPE 0 P
 totem_access_set PROTOTYPE g
 totem_access_unset PROTOTYPE g
 totem_access_type PROTOTYPE P R E
-#
+# Totems: CHARACTER
 totem_add CHARACTER 8 4
 totem_letter CHARACTER 0 C
 totem_access_set CHARACTER i
 totem_access_unset CHARACTER i
 totem_access_type CHARACTER R E
-#
+# Totems: NPC
 totem_add NPC 8 8
 totem_letter NPC 0 N
 totem_access_set NPC g
 totem_access_unset NPC g
 totem_access_type NPC P R E
-#
+# Totems: PC
 totem_add PC 8 16
 totem_letter PC 0 N
 totem_access_set PC i
 totem_access_unset PC i
 totem_access_type PC T R E
-#
+# Totems: ITEM
 totem_add ITEM 8 32
 totem_letter ITEM 0 I
 totem_access_set ITEM g
 totem_access_unset ITEM g
 totem_access_type ITEM P R E
-#
+# Totems: STRUCTURE
 totem_add STRUCTURE 8 64
 totem_letter STRUCTURE 0 S
 totem_access_set STRUCTURE g
 totem_access_unset STRUCTURE g
 totem_access_type STRUCTURE P R E
-#
+# Totems: REGION
 totem_add REGION 8 128
 totem_letter REGION 0 R
 totem_access_set REGION g
 totem_access_unset REGION g
 totem_access_type REGION P R E
-#
+# Totems: FACTION
 totem_add FACTION 7 1
 totem_letter FACTION 0 F
 totem_access_set FACTION I
 totem_access_unset FACTION I
 totem_access_type FACTION P R E
+# Totems: Stat
+totem_add STAT 5 1
+totem_letter STAT 1 S
+totem_access_set STAT i
+totem_access_unset STAT i
+totem_access_type STAT P R E
+# Totems: STAT_ATTRIBUTE
+totem_add STAT_ATTRIBUTE 5 2
+totem_letter STAT_ATTRIBUTE 1 A
+totem_access_set STAT_ATTRIBUTE i
+totem_access_unset STAT_ATTRIBUTE i
+totem_access_type STAT_ATTRIBUTE P R E
+# Totems: STAT_SKILL
+totem_add STAT_SKILL 5 4
+totem_letter STAT_SKILL 1 K
+totem_access_set STAT_SKILL i
+totem_access_unset STAT_SKILL i
+totem_access_type STAT_SKILL P R E
+# Totems: STAT_FORM
+totem_add STAT_FORM 5 8
+totem_letter STAT_FORM 1 F
+totem_access_set STAT_FORM i
+totem_access_unset STAT_FORM i
+totem_access_type STAT_FORM P R E
 # Final Load
 include objects.conf
