--- a/storyteller/wod20/wod.conf
+++ b/storyteller/wod20/wod.conf
@@ -1,6 +1,4 @@
-# Load base storyteller.
-include storyteller.conf
 # Define reality levels.
 reality_level Real 1 DESC
-reality_level Shadow 2 GAME_SHADOW 1
-reality_level Penumbra 4 GAME_PENUMBRA 1
+reality_level Shadow 2 DESC.SHADOW 1
+reality_level Penumbra 4 DESC.PENUMBRA 1
