--- a/codesuite.conf
+++ b/codesuite.conf
@@ -23,6 +23,7 @@ player_match_own_commands 1
 # Home must be restricted in favor of a softcoded 'recall' command.
 restrict_home 16384
 # Misc
+output_limit 131072
 expand_goto 1
 secure_jumpok 0
 enable_tstamps 1
@@ -36,9 +37,6 @@ room_adisconnect 1
 idle_timeout -1
 global_sideeffects 1
 mux_lcon_compat 1
-# Up the cache to handle larger games.
-cache_width 2048
-cache_depth 128
 # inventory/equipment system
 alt_inventories 1
 altover_inv 1
