--- a/codesuite.conf
+++ b/codesuite.conf
@@ -23,6 +23,7 @@ player_match_own_commands 1
 # Home must be restricted in favor of a softcoded 'recall' command.
 restrict_home 16384
 # Misc
+string_conn _conn
 output_limit 131072
 expand_goto 1
 secure_jumpok 0
