Working on Building.

--- a/codesuite.conf
+++ b/codesuite.conf
@@ -3,6 +3,7 @@ dump_message
 postdump_message
 # Attributes
 atrperms INFO.:6:5 CHANINFO.:6:5 CHANNELS.:6:5 BBS.:6:5 GAME.:6:2 FAC.:6:2 ST.:6:2 STAT.:6:2 EQUIP.:6:2
+attr_access desc default
 # Functions
 function_access lattrp guildmaster
 # Connect
@@ -24,6 +25,7 @@ player_match_own_commands 1
 restrict_home 16384
 # Misc
 string_conn _conn
+connect_methods 6
 output_limit 131072
 expand_goto 1
 secure_jumpok 0
