added a text formatter

--- a/codesuite.conf
+++ b/codesuite.conf
@@ -24,6 +24,7 @@ player_match_own_commands 1
 # Home must be restricted in favor of a softcoded 'recall' command.
 restrict_home 16384
 # Misc
+strfunc_softfuncs 2
 string_conn _conn
 connect_methods 6
 output_limit 131072
