Working on some more fixes.

--- a/codesuite.conf
+++ b/codesuite.conf
@@ -2,7 +2,7 @@
 dump_message
 postdump_message
 # Attributes
-atrperms INFO.:6:5 CHANINFO.:6:5 CHANNELS.:6:5 BBS.:6:5 GAME.:6:2 FAC.:6:2 ST.:6:2 STAT.:6:2 EQUIP.:6:2
+atrperms INFO.:6:5 CHANINFO.:6:5 CHANNELS.:6:5 BBS.:6:5 GAME.:6:2 FINGER.:6:2 FAC.:6:2 ST.:6:2 STAT.:6:2 EQUIP.:6:2
 attr_access desc default
 # Functions
 function_access lattrp guildmaster
@@ -10,6 +10,7 @@ function_access lattrp guildmaster
 connect_perm 102
 # Locks
 parentable_control_lock yes
+nobracket_locks 1
 # Formatters
 format_contents 1
 format_exits 1
@@ -24,6 +25,8 @@ player_match_own_commands 1
 # Home must be restricted in favor of a softcoded 'recall' command.
 restrict_home 16384
 # Misc
+sideeffects all
+safer_passwords 0
 strfunc_softfuncs 2
 string_conn _conn
 connect_methods 6
@@ -41,6 +44,7 @@ room_adisconnect 1
 idle_timeout -1
 global_sideeffects 1
 mux_lcon_compat 1
+ifelse_compat 1
 # inventory/equipment system
 alt_inventories 1
 altover_inv 1
