Lots of little fixes. Added Wizlist and Approve systems.

--- a/codesuite.conf
+++ b/codesuite.conf
@@ -25,6 +25,7 @@ player_match_own_commands 1
 # Home must be restricted in favor of a softcoded 'recall' command.
 restrict_home 16384
 # Misc
+name_with_desc 1
 sideeffects all
 safer_passwords 0
 strfunc_softfuncs 2
