Finished a bunch of additions.

--- a/codesuite.conf
+++ b/codesuite.conf
@@ -24,6 +24,11 @@ match_own_commands 1
 player_match_own_commands 1
 # Home must be restricted in favor of a softcoded 'recall' command.
 restrict_home 16384
+# api access - everyone is allowed access to the API, but must still be
+# enabled by individual objects.
+passapi_site 0.0.0.0 0.0.0.0
+max_lastsite_api 20
+power_objects 1
 # Misc
 name_with_desc 1
 sideeffects all
